2004-12-27 Paul Stoffregen <paul AT pjrc.com>

	* src/SDCCmain.c: make --float-reent default for mcs51
	* device/lib/_fsadd.c: added mcs51 assembly version
	* device/lib/_fssub.c: added mcs51 assembly version
	* device/lib/_fsmul.c: added mcs51 assembly version
	* device/lib/_fsdiv.c: added mcs51 assembly version
	* device/lib/_fseq.c: added mcs51 assembly version
	* device/lib/_fsneq.c: added mcs51 assembly version
	* device/lib/_fsgt.c: added mcs51 assembly version
	* device/lib/_fslt.c: added mcs51 assembly version
	* device/lib/_fscmp.c: shared code for fseq,fsgt,fslt,fsneq
	* device/lib/Makefile.in: add _fscmp to build
	* device/lib/libfloat.lib: add _fscmp to build

2004-12-27 Paul Stoffregen <paul AT pjrc.com>

	* device/lib/_fs2slong.c: added mcs51 assembly version
	* device/lib/_fs2sint.c: added mcs51 assembly version
	* device/lib/_fs2schar.c: added mcs51 assembly version
	* device/lib/_fs2ulong.c: added mcs51 assembly version
	* device/lib/_fs2uint.c: added mcs51 assembly version
	* device/lib/_fs2uchar.c: added mcs51 assembly version
	* device/lib/_slong2fs.c: added mcs51 assembly version
	* device/lib/_sint2fs.c: added mcs51 assembly version
	* device/lib/_schar2fs.c: added mcs51 assembly version
	* device/lib/_ulong2fs.c: added mcs51 assembly version
	* device/lib/_uint2fs.c: added mcs51 assembly version
	* device/lib/_uchar2fs.c: added mcs51 assembly version
	* device/include/float.h: added #define to select asm vs c

2004-12-26 Paul Stoffregen <paul AT pjrc.com>

	* device/lib/printf_fast.c: improvements to float output
	* device/include/float.h: add defines for assembly float library
	* device/lib/_fsget1arg.c: receive 1 float arg
	* device/lib/_fsget2args.c: receive 2 float args (reentrant)
	* device/lib/_fsnormalize.c: normalize a float
	* device/lib/_fsreturnval.c: return float, various helper routines
	* device/lib/_fsrshift.c: right shift a float's mantissa
	* device/lib/_fsswapargs.c: swap 2 floats