@@ -60,6 +60,7 @@ extern void putchar(char);
 
 #ifdef __mcs51
 extern void printf_fast(code char *fmt, ...) _REENTRANT;
+extern void printf_fast_f(code char *fmt, ...) _REENTRANT;
 extern void printf_tiny(code char *fmt, ...) _REENTRANT;
 #endif
 
